--- a/web/style/output.css
+++ b/web/style/output.css
@@ -546,6 +546,30 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+.fixed{
+  position: fixed;
+}
+
+.inset-0{
+  inset: 0px;
+}
+
+.bottom-0{
+  bottom: 0px;
+}
+
+.left-0{
+  left: 0px;
+}
+
+.top-12{
+  top: 3rem;
+}
+
+.m-3{
+  margin: 0.75rem;
+}
+
 .mx-auto{
   margin-left: auto;
   margin-right: auto;
@@ -568,12 +592,20 @@ video {
   min-height: 48px;
 }
 
+.w-\[200px\]{
+  width: 200px;
+}
+
 .min-w-\[10\%\]{
   min-width: 10%;
 }
 
 .max-w-3xl{
   max-width: 48rem;
+}
+
+.flex-col{
+  flex-direction: column;
 }
 
 .items-center{
@@ -588,9 +620,18 @@ video {
   justify-content: space-around;
 }
 
+.overflow-hidden{
+  overflow: hidden;
+}
+
 .bg-\[\#151515\]{
   --tw-bg-opacity: 1;
   background-color: rgb(21 21 21 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#1d1d1d\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(29 29 29 / var(--tw-bg-opacity));
 }
 
 .p-6{
@@ -602,6 +643,20 @@ video {
   padding-right: 12px;
 }
 
+.py-1{
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
+.py-3{
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+
+.pl-\[8px\]{
+  padding-left: 8px;
+}
+
 .text-center{
   text-align: center;
 }
@@ -609,6 +664,10 @@ video {
 .text-4xl{
   font-size: 2.25rem;
   line-height: 2.5rem;
+}
+
+.text-\[11px\]{
+  font-size: 11px;
 }
 
 .text-\[13px\]{
@@ -623,9 +682,23 @@ video {
   font-weight: 600;
 }
 
+.uppercase{
+  text-transform: uppercase;
+}
+
+.text-\[\#999999\]{
+  --tw-text-opacity: 1;
+  color: rgb(153 153 153 / var(--tw-text-opacity));
+}
+
 .text-\[\#C2C2C2\]{
   --tw-text-opacity: 1;
   color: rgb(194 194 194 / var(--tw-text-opacity));
+}
+
+.text-\[\#e5e5e5\]{
+  --tw-text-opacity: 1;
+  color: rgb(229 229 229 / var(--tw-text-opacity));
 }
 
 .text-white{
