--- a/web/style/output.css
+++ b/web/style/output.css
@@ -566,8 +566,9 @@ video {
   top: 3rem;
 }
 
-.m-3{
-  margin: 0.75rem;
+.mx-\[1px\]{
+  margin-left: 1px;
+  margin-right: 1px;
 }
 
 .mx-auto{
@@ -580,8 +581,13 @@ video {
   margin-bottom: 0px;
 }
 
-.ml-3{
-  margin-left: 0.75rem;
+.my-3{
+  margin-top: 0.75rem;
+  margin-bottom: 0.75rem;
+}
+
+.mt-\[1px\]{
+  margin-top: 1px;
 }
 
 .flex{
@@ -606,6 +612,10 @@ video {
 
 .max-w-3xl{
   max-width: 48rem;
+}
+
+.cursor-pointer{
+  cursor: pointer;
 }
 
 .flex-col{
@@ -638,8 +648,17 @@ video {
   background-color: rgb(29 29 29 / var(--tw-bg-opacity));
 }
 
+.p-3{
+  padding: 0.75rem;
+}
+
 .p-6{
   padding: 1.5rem;
+}
+
+.px-3{
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
 }
 
 .px-\[12px\]{
@@ -652,13 +671,12 @@ video {
   padding-bottom: 0.25rem;
 }
 
-.py-3{
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
+.pl-6{
+  padding-left: 1.5rem;
 }
 
-.pl-\[8px\]{
-  padding-left: 8px;
+.pr-3{
+  padding-right: 0.75rem;
 }
 
 .text-center{
@@ -714,14 +732,49 @@ video {
   font-family: 'Inter', sans-serif;
 }
 
+.hover\:bg-\[\#37373D\]:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(55 55 61 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-\[\#3c3c3c\]\/35:hover{
+  background-color: rgb(60 60 60 / 0.35);
+}
+
+.hover\:bg-\[\#999999\]:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(153 153 153 / var(--tw-bg-opacity));
+}
+
 .hover\:text-white:hover{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.focus\:bg-\[\#37373D\]:focus{
+  --tw-bg-opacity: 1;
+  background-color: rgb(55 55 61 / var(--tw-bg-opacity));
+}
+
 .focus\:text-white:focus{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.focus\:ring-1:focus{
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+
+.focus\:ring-violet-300:focus{
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(196 181 253 / var(--tw-ring-opacity));
+}
+
+.active\:bg-\[\#37373D\]:active{
+  --tw-bg-opacity: 1;
+  background-color: rgb(55 55 61 / var(--tw-bg-opacity));
 }
 
 .active\:text-white:active{
