--- a/web/style/output.css
+++ b/web/style/output.css
@@ -546,6 +546,10 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+.visible{
+  visibility: visible;
+}
+
 .fixed{
   position: fixed;
 }
@@ -586,12 +590,40 @@ video {
   margin-bottom: 0.75rem;
 }
 
+.mb-\[24px\]{
+  margin-bottom: 24px;
+}
+
+.mb-\[8px\]{
+  margin-bottom: 8px;
+}
+
+.mt-\[16px\]{
+  margin-top: 16px;
+}
+
 .mt-\[1px\]{
   margin-top: 1px;
 }
 
+.mt-\[24px\]{
+  margin-top: 24px;
+}
+
 .flex{
   display: flex;
+}
+
+.grid{
+  display: grid;
+}
+
+.h-\[100vh\]{
+  height: 100vh;
+}
+
+.h-\[154px\]{
+  height: 154px;
 }
 
 .min-h-\[100vh\]{
@@ -600,6 +632,10 @@ video {
 
 .min-h-\[48px\]{
   min-height: 48px;
+}
+
+.w-\[100vw\]{
+  width: 100vw;
 }
 
 .w-\[200px\]{
@@ -614,8 +650,20 @@ video {
   max-width: 48rem;
 }
 
+.max-w-\[528px\]{
+  max-width: 528px;
+}
+
 .cursor-pointer{
   cursor: pointer;
+}
+
+.grid-cols-2{
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
+.grid-rows-2{
+  grid-template-rows: repeat(2, minmax(0, 1fr));
 }
 
 .flex-col{
@@ -626,6 +674,10 @@ video {
   align-items: center;
 }
 
+.justify-center{
+  justify-content: center;
+}
+
 .justify-between{
   justify-content: space-between;
 }
@@ -634,8 +686,25 @@ video {
   justify-content: space-around;
 }
 
+.gap-3{
+  gap: 0.75rem;
+}
+
+.gap-6{
+  gap: 1.5rem;
+}
+
 .overflow-hidden{
   overflow: hidden;
+}
+
+.rounded-sm{
+  border-radius: 0.125rem;
+}
+
+.bg-\[\#0E0E0E\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(14 14 14 / var(--tw-bg-opacity));
 }
 
 .bg-\[\#151515\]{
@@ -656,6 +725,14 @@ video {
   padding: 1.5rem;
 }
 
+.p-\[24px\]{
+  padding: 24px;
+}
+
+.p-\[91px\]{
+  padding: 91px;
+}
+
 .px-3{
   padding-left: 0.75rem;
   padding-right: 0.75rem;
@@ -669,6 +746,10 @@ video {
 .py-1{
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
+}
+
+.pb-\[46px\]{
+  padding-bottom: 46px;
 }
 
 .pl-6{
@@ -696,8 +777,20 @@ video {
   font-size: 13px;
 }
 
+.text-\[25px\]{
+  font-size: 25px;
+}
+
+.text-\[32px\]{
+  font-size: 32px;
+}
+
 .font-medium{
   font-weight: 500;
+}
+
+.font-normal{
+  font-weight: 400;
 }
 
 .font-semibold{
@@ -726,6 +819,10 @@ video {
 .text-white{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.underline{
+  text-decoration-line: underline;
 }
 
 * {
