worked on navigation bar

--- a/web/input.css
+++ b/web/input.css
@@ -12,3 +12,5 @@
     display:block;
 }
 .material-symbols-outlined.md-16 { font-size: 16px; }
+.material-symbols-outlined.md-17 { font-size: 17px; }
+.material-symbols-outlined.md-18 { font-size: 18px; }
