--- a/web/style/output.css
+++ b/web/style/output.css
@@ -619,6 +619,10 @@ video {
   margin-left: 200px;
 }
 
+.ml-\[32px\]{
+  margin-left: 32px;
+}
+
 .ml-\[3px\]{
   margin-left: 3px;
 }
@@ -629,6 +633,10 @@ video {
 
 .mr-\[12px\]{
   margin-right: 12px;
+}
+
+.mr-\[2px\]{
+  margin-right: 2px;
 }
 
 .mr-\[5px\]{
@@ -858,6 +866,11 @@ video {
   background-color: rgb(237 255 165 / var(--tw-bg-opacity));
 }
 
+.bg-green-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(34 197 94 / var(--tw-bg-opacity));
+}
+
 .p-6{
   padding: 1.5rem;
 }
@@ -893,6 +906,11 @@ video {
   padding-right: 16px;
 }
 
+.px-\[25px\]{
+  padding-left: 25px;
+  padding-right: 25px;
+}
+
 .px-\[5px\]{
   padding-left: 5px;
   padding-right: 5px;
@@ -911,6 +929,11 @@ video {
 .py-1{
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
+}
+
+.py-\[10px\]{
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 .py-\[2px\]{
