--- a/web/style/output.css
+++ b/web/style/output.css
@@ -834,6 +834,10 @@ video {
   border-width: 1px;
 }
 
+.border-t-\[1px\]{
+  border-top-width: 1px;
+}
+
 .border-none{
   border-style: none;
 }
@@ -1000,6 +1004,10 @@ video {
 
 .pr-\[3px\]{
   padding-right: 3px;
+}
+
+.pr-\[6px\]{
+  padding-right: 6px;
 }
 
 .pr-\[8px\]{
@@ -1198,6 +1206,10 @@ video {
 .active\:bg-\[\#37373D\]:active{
   --tw-bg-opacity: 1;
   background-color: rgb(55 55 61 / var(--tw-bg-opacity));
+}
+
+.active\:bg-\[\#3c3c3c\]\/35:active{
+  background-color: rgb(60 60 60 / 0.35);
 }
 
 .active\:text-\[\#e5e5e5\]:active{
