--- a/web/style/output.css
+++ b/web/style/output.css
@@ -630,16 +630,16 @@ video {
   margin-bottom: 8px;
 }
 
+.ml-1{
+  margin-left: 0.25rem;
+}
+
 .ml-\[10px\]{
   margin-left: 10px;
 }
 
 .ml-\[191px\]{
   margin-left: 191px;
-}
-
-.ml-\[200px\]{
-  margin-left: 200px;
 }
 
 .ml-\[3px\]{
@@ -870,10 +870,6 @@ video {
   gap: 1.5rem;
 }
 
-.overflow-hidden{
-  overflow: hidden;
-}
-
 .rounded-\[4px\]{
   border-radius: 4px;
 }
@@ -1017,12 +1013,16 @@ video {
   padding-bottom: 8px;
 }
 
-.pb-\[24px\]{
-  padding-bottom: 24px;
+.pb-\[12px\]{
+  padding-bottom: 12px;
 }
 
-.pb-\[46px\]{
-  padding-bottom: 46px;
+.pb-\[18px\]{
+  padding-bottom: 18px;
+}
+
+.pb-\[24px\]{
+  padding-bottom: 24px;
 }
 
 .pb-\[4px\]{
@@ -1067,6 +1067,10 @@ video {
 
 .pr-\[8px\]{
   padding-right: 8px;
+}
+
+.pt-\[45px\]{
+  padding-top: 45px;
 }
 
 .text-center{
