--- a/web/style/output.css
+++ b/web/style/output.css
@@ -961,6 +961,11 @@ video {
   padding: 91px;
 }
 
+.px-2{
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
 .px-3{
   padding-left: 0.75rem;
   padding-right: 0.75rem;
