--- a/web/style/output.css
+++ b/web/style/output.css
@@ -658,6 +658,10 @@ video {
   margin-left: auto;
 }
 
+.mr-2{
+  margin-right: 0.5rem;
+}
+
 .mr-\[12px\]{
   margin-right: 12px;
 }
@@ -880,6 +884,10 @@ video {
 
 .rounded-\[4px\]{
   border-radius: 4px;
+}
+
+.rounded-md{
+  border-radius: 0.375rem;
 }
 
 .rounded-sm{
