--- a/web/style/output.css
+++ b/web/style/output.css
@@ -863,6 +863,14 @@ video {
   cursor: pointer;
 }
 
+.resize-y{
+  resize: vertical;
+}
+
+.resize{
+  resize: both;
+}
+
 .grid-cols-2{
   grid-template-columns: repeat(2, minmax(0, 1fr));
 }
