--- a/web/src/index.css
+++ b/web/src/index.css
@@ -20,7 +20,7 @@
   -moz-osx-font-smoothing: grayscale;
   color-scheme: light dark;
 
-  --primary-01:light-dark(#fff,#1d1d1d)
+  --primary-01:light-dark(#fff,#1d1d1d);
   --primary-02:light-dark(#f2f2f2,#151515);
   --primary-03:light-dark(#f3f3f3,#252525);
   --primary-04:light-dark(#252525,white);
@@ -36,10 +36,10 @@
   --yellow-primary-03:#EDFFA1;
 
   /*Color themes*/
-  --purple-primary-01:#faf6ff;
-  --orange-primary-01:#f9f4f0;
-  --red-primary-01:#f7ecec;
-  --pink-primary-01:#f5ecf0;
+  --purple-primary-01:light-dark(#faf6ff,#4a0589);
+  --orange-primary-01:light-dark(#f9f4f0,#c54b0c);
+  --red-primary-01:light-dark(#f7ecec,#b90909);
+  --pink-primary-01:light-dark(#f5ecf0,#a7094f);
 
 }
 
@@ -72,4 +72,11 @@
 .sidebar_folders,
 .sidebar_shared_folder{
   scrollbar-width: none;
+}
+
+@supports(backdrop-filter: blur(4rem)){
+    .blur-effect{
+        background: hsl(0 0% 100% / 0.3);
+        backdrop-filter: blur(4rem);
+    }
 }
